stabilize windows build

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -10,8 +10,7 @@ url=https://github.com/NicklasTegner/pypandoc
 name=pypandoc
 prebuild=build_pandoc_bin.sh
 
-[Gitlab]
-config=
+[github]
 python-genpackagedoc=
 python-extensions-collection=
 python-jsonpreprocessor=
