update repositories list

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -22,4 +22,11 @@ robotframework-testresult2rqmtool=
 robotframework-testresultwebapptool=
 robotframework-testsuitesmanagement=
 robotframework-tutorial=
+
+robotframework-robotlog2rqm=
+robotframework-robotlog2db=
+python-pytestlog2db=
+testresultwebapp=
+
 robotframework=
+
