--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -11,10 +11,10 @@ name=pypandoc
 prebuild=build_pandoc_bin.sh
 
 [github]
-python-genpackagedoc=
+;python-genpackagedoc=
 python-extensions-collection=
-python-jsonpreprocessor=
-robotframework-documentation=
+;python-jsonpreprocessor=
+;robotframework-documentation=
 robotframework-extensions-collection=
 robotframework-qconnect-base=
 robotframework-selftest=
