--- a/.github/workflows/release_to_pypi.yml
+++ b/.github/workflows/release_to_pypi.yml
@@ -33,7 +33,7 @@ jobs:
           sudo apt-get install -y pandoc
           sudo apt-get install -y texlive-latex-*
 
-      - name: Clone repositories"
+      - name: Clone repositories
         run: |
           chmod +x ./cloneall
           ./cloneall
