update repository configuration to exclude only robotframework-documentation repo

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -11,10 +11,12 @@ name=pypandoc
 prebuild=build_pandoc_bin.sh
 
 [github]
-;python-genpackagedoc=
+python-genpackagedoc=
 python-extensions-collection=
-;python-jsonpreprocessor=
-;robotframework-documentation=
+python-jsonpreprocessor=
+python-pytestlog2db=
+
+robotframework=
 robotframework-extensions-collection=
 robotframework-qconnect-base=
 robotframework-selftest=
@@ -22,11 +24,8 @@ robotframework-testresult2rqmtool=
 robotframework-testresultwebapptool=
 robotframework-testsuitesmanagement=
 robotframework-tutorial=
-
 robotframework-robotlog2rqm=
 robotframework-robotlog2db=
-python-pytestlog2db=
+
 testresultwebapp=
-
-robotframework=
-
+;robotframework-documentation=
