add latexrecommended collection when installing texlive

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          choco install texlive --params "'/collections:latexextra'"
+          choco install texlive --params "'/collections:latexextra,latexrecommended'"
 
       - name: Clone repositories
         shell: bash
