--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          choco install texlive --execution-timeout 5400 --params "'/collections:latexextra /extraPackages:wasysym'"
+          choco install texlive --execution-timeout 5400 --params "'/collections:latexextra,fontsrecommended /extraPackages:wasysym'"
 
       - name: Clone repositories
         shell: bash
