restore linux job, enhance texlive installation on Windows

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -4,60 +4,61 @@ on:
   push
 
 jobs:
-  # build-linux:
-  #   name: Build Linux package
-  #   runs-on: ubuntu-latest
+  build-linux:
+    name: Build Linux package
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout source
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
 
-  #     - name: Install dependencies
-  #       run: |
-  #         sudo apt-get install -y libxshmfence1 libglu1
-  #         sudo apt-get install -y libatk1.0-0
-  #         sudo apt-get install -y libatk-bridge2.0-0
-  #         sudo apt-get install -y libgdk-pixbuf2.0-dev
-  #         sudo apt-get install -y libgtk-3-0
-  #         sudo apt-get install -y libgbm-dev
-  #         sudo apt-get install -y libasound2-dev
-  #         sudo apt-get install -y zstd
-  #         sudo apt-get install -y xmlstarlet
-  #         sudo apt-get install -y curl
-  #         sudo apt-get install -y default-jre
-  #         sudo apt-get install -y libmariadb-dev-compat libmariadb-dev
-  #         sudo apt-get install -y clang
-  #         sudo apt-get install -y unixodbc-dev
-  #         sudo apt-get install -y python3-dev
-  #         sudo apt-get install -y build-essential
-  #         sudo apt-get install -y pandoc
-  #         sudo apt-get install -y texlive-latex-*
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y libxshmfence1 libglu1
+          sudo apt-get install -y libatk1.0-0
+          sudo apt-get install -y libatk-bridge2.0-0
+          sudo apt-get install -y libgdk-pixbuf2.0-dev
+          sudo apt-get install -y libgtk-3-0
+          sudo apt-get install -y libgbm-dev
+          sudo apt-get install -y libasound2-dev
+          sudo apt-get install -y zstd
+          sudo apt-get install -y xmlstarlet
+          sudo apt-get install -y curl
+          sudo apt-get install -y default-jre
+          sudo apt-get install -y libmariadb-dev-compat libmariadb-dev
+          sudo apt-get install -y clang
+          sudo apt-get install -y unixodbc-dev
+          sudo apt-get install -y python3-dev
+          sudo apt-get install -y build-essential
+          sudo apt-get install -y pandoc
+          sudo apt-get install -y texlive-latex-*
 
-  #     - name: Clone repositories
-  #       run: |
-  #         chmod +x ./cloneall
-  #         ./cloneall
+      - name: Clone repositories
+        run: |
+          chmod +x ./cloneall
+          ./cloneall
 
-  #     - name: Install
-  #       run: |
-  #         chmod +x ./wget/install.sh
-  #         ./wget/install.sh
+      - name: Install
+        run: |
+          chmod +x ./wget/install.sh
+          ./wget/install.sh
 
-  #     - name: Build
-  #       run: |
-  #         chmod +x ./build
-  #         ./build
+      - name: Build
+        run: |
+          chmod +x ./build
+          ./build
 
-  #     - name: Upload built package
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: linux-package
-  #         path: output_lx/*.deb
+      - name: Upload built package
+        uses: actions/upload-artifact@v3
+        with:
+          name: linux-package
+          path: output_lx/*.deb
 
   build-windows:
     name: Build Windows package
     runs-on: windows-latest
-
+    env:
+      GENDOC_LATEXPATH: C:/texlive/2022/bin/win32
     steps:
       - name: Support long path in git
         run: git config --system core.longpaths true
@@ -67,7 +68,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          choco install texlive --execution-timeout 5400 --params "'/collections:latexextra,fontsrecommended /extraPackages:wasysym'"
+          choco install texlive --version=2022.20221202 --execution-timeout 5400 --params "'/collections:latexextra,fontsrecommended'"
 
       - name: Clone repositories
         shell: bash
