--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -14,24 +14,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get install -y libxshmfence1 libglu1
-          sudo apt-get install -y libatk1.0-0
-          sudo apt-get install -y libatk-bridge2.0-0
-          sudo apt-get install -y libgdk-pixbuf2.0-dev
-          sudo apt-get install -y libgtk-3-0
-          sudo apt-get install -y libgbm-dev
-          sudo apt-get install -y libasound2-dev
-          sudo apt-get install -y zstd
-          sudo apt-get install -y xmlstarlet
-          sudo apt-get install -y curl
-          sudo apt-get install -y default-jre
-          sudo apt-get install -y libmariadb-dev-compat libmariadb-dev
-          sudo apt-get install -y clang
-          sudo apt-get install -y unixodbc-dev
-          sudo apt-get install -y python3-dev
-          sudo apt-get install -y build-essential
-          sudo apt-get install -y pandoc
-          sudo apt-get install -y texlive-latex-*
+          chmod +x ./requirements_linux.sh
+          ./requirements_linux.sh
 
       - name: Clone repositories
         run: |
@@ -67,8 +51,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: |
-          choco install texlive --version=2022.20221202 --params "'/extraPackages:multirow,booktabs,framed,fvextra,courier,efbox,grffile,pdfpages,tcolorbox,wasysym,wasy,fancyvrb,xcolor,etoolbox,upquote,lineno,eso-pic,lstaddons,pdflscape,infwarerr,pgf,environ,trimspaces,listings,pdfcol'"
+        shell: bash
+        run: ./requirements_windows.sh
 
       - name: Clone repositories
         shell: bash
