--- a/build
+++ b/build
@@ -31,13 +31,13 @@ ConfigFile='./config/repositories/repositories.conf'
 arguments=( "${@}" )
 
 if [ "$#" -eq 0 ]; then
-   # for Gitlab CI pipeline
-   if [ -n "$CI_COMMIT_TAG" ] ; then
-	  RobotFrameworkVersion=`echo $CI_COMMIT_TAG | sed -E -e "s/(rel|dev)\///g"`
-   elif [ "$CI_COMMIT_REF_NAME" == "$CI_DEFAULT_BRANCH" ]; then
-	  RobotFrameworkVersion=`echo merged_$CI_COMMIT_REF_NAME | sed -e "s/\//-/g"`
-   elif [ -n "$CI_COMMIT_REF_NAME" ]; then
-      RobotFrameworkVersion=`echo dev_$CI_COMMIT_REF_NAME | sed -e "s/\//-/g"`
+   # for Github Actions workflow
+   if [ "$GITHUB_REF_TYPE" == "tag" ] && [ -n "$GITHUB_REF_NAME" ]; then
+	  RobotFrameworkVersion=`echo $GITHUB_REF_NAME | sed -E -e "s/(rel|dev)\/aio\///g"`
+   elif [ "$GITHUB_REF_TYPE" == "branch" ]; then
+	  RobotFrameworkVersion=`echo dev_$GITHUB_REF_NAME | sed -e "s/\//-/g"`
+   else
+	  RobotFrameworkVersion="unknown_version"
    fi
 
    arguments=`echo "//DRobotFrameworkVersion=$RobotFrameworkVersion"`
