--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -22,4 +22,7 @@ robotframework-robotlog2rqm=
 robotframework-robotlog2db=
 
 testresultwebapp=
-;robotframework-documentation=
+; robotframework-documentation=
+
+[supported-server]
+github=https://github.com/test-fullautomation
