--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -8,11 +8,13 @@ on:
   pull_request:
     types:
       - closed
+    branches: 
+      - develop
+  workflow_dispatch:
 
 jobs:
   build-linux:
     name: Build Linux package
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -47,7 +49,6 @@ jobs:
 
   build-windows:
     name: Build Windows package
-    if: github.event.pull_request.merged == true
     runs-on: windows-latest
     env:
       GENDOC_LATEXPATH: C:/texlive/2022/bin/win32
