--- a/build
+++ b/build
@@ -59,19 +59,37 @@ else
    done
 fi
 
+if [ -f $ConfigFile ]; then
+	echo -e $COL_GREEN"ConfigFile            = $ITrackService"$COL_RESET
+else
+	errormsg "Repo configuration '$config_file' is not existing"
+fi
+
 if [ "$ITrackService" != "NONE" ]; then
 	echo -e $COL_GREEN"ITrackService         = $ITrackService"$COL_RESET
 	arguments+="//ITrackService=$ITrackService"
 fi
 
 if [ "$RobotFrameworkVersion" == "" ]; then
+	RobotFrameworkVersion = "unkown_version"
 	# for Github Actions workflow
-	if [ "$GITHUB_REF_TYPE" == "tag" ] && [ -n "$GITHUB_REF_NAME" ]; then
-		RobotFrameworkVersion=`echo $GITHUB_REF_NAME | sed -E -e "s/(rel|dev)\/aio\///g"`
-	elif [ "$GITHUB_REF_TYPE" == "branch" ]; then
-		RobotFrameworkVersion=`echo dev_$GITHUB_REF_NAME | sed -e "s/\//-/g"`
-	else
-		RobotFrameworkVersion="unknown_version"
+	if [ -n "$GITHUB_REF_TYPE"]; then
+		if [ "$GITHUB_REF_TYPE" == "tag" ] && [ -n "$GITHUB_REF_NAME" ]; then
+			RobotFrameworkVersion=`echo $GITHUB_REF_NAME | sed -E -e "s/(rel|dev)\/aio\///g"`
+		elif [ "$GITHUB_REF_NAME" == "$GITHUB_BASE_REF" ]; then
+			RobotFrameworkVersion=`echo merged_$GITHUB_REF_NAME | sed -e "s/\//-/g"`
+		elif [ "$GITHUB_REF_TYPE" == "branch" ]; then
+			RobotFrameworkVersion=`echo dev_$GITHUB_REF_NAME | sed -e "s/\//-/g"`
+		fi
+	# for Gitlab CI
+	elif [ -n "$CI_COMMIT_REF_NAME"]; then
+		if [ -n "$CI_COMMIT_TAG" ] ; then
+			RobotFrameworkVersion=`echo $CI_COMMIT_TAG | sed -E -e "s/(rel|dev)\///g"`
+		elif [ "$CI_COMMIT_REF_NAME" == "$CI_DEFAULT_BRANCH" ]; then
+			RobotFrameworkVersion=`echo merged_$CI_COMMIT_REF_NAME | sed -e "s/\//-/g"`
+		elif [ -n "$CI_COMMIT_REF_NAME" ]; then
+			RobotFrameworkVersion=`echo dev_$CI_COMMIT_REF_NAME | sed -e "s/\//-/g"`
+		fi
 	fi
 fi
 
