Enable robocop lint by default

--- a/config/robotvscode/data/user-data/User/settings.json
+++ b/config/robotvscode/data/user-data/User/settings.json
@@ -37,6 +37,7 @@
     "editor.renderWhitespace": "all",
     "robot.language-server.python": "${env:RobotPythonPath}/python3",
     "robot.python.executable": "${env:RobotPythonPath}/python3",
+	"robot.lint.robocop.enabled ": true,
     "robot.python.env": {
     
     },
