Disable update notification of VS Codium

--- a/config/robotvscode/data/user-data/User/settings.json
+++ b/config/robotvscode/data/user-data/User/settings.json
@@ -64,6 +64,7 @@
     "security.workspace.trust.emptyWindow": true,
     "timeline.excludeSources": [],
     "extensions.autoUpdate": false,
+    "update.mode": "none",
     "rst.preview.pythonPath": "{RobotPythonPath}/python3",
     // Other specific settings
 }
