--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -104,9 +104,7 @@ jobs:
 
     - name: Install on Windows
       shell: cmd
-      run: |
-        tar -xf windows-package.zip
-        ./scripts/install-windows.bat
+      run: ./scripts/install-windows.bat
 
     - name: Run tests on Windows
       shell: cmd
@@ -128,13 +126,10 @@ jobs:
         name: linux-package
 
     - name: Install on Linux
-      run: |
-        pwd
-        ls -alh
-        unzip -q ./linux-package.zip  && sudo apt-get install *.deb
+      run: sudo apt-get install ./*.deb
 
     - name: Run tests on Linux
-      run: python test/aio-test-trigger/aio-test-trigger.py
+      run: $RobotPythonPath/python test/aio-test-trigger/aio-test-trigger.py
 
   # release:
   #   runs-on: ubuntu-latest
