--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -100,6 +100,10 @@ jobs:
     - name: Checkout source
       uses: actions/checkout@v2
 
+    - name: Clone repositories
+      shell: bash
+      run: ./cloneall
+
     - name: Download Windows installer package
       uses: actions/download-artifact@v2
       with:
@@ -124,6 +128,11 @@ jobs:
     steps:
     - name: Checkout source
       uses: actions/checkout@v2
+
+    - name: Clone repositories
+      run: |
+        chmod +x ./cloneall
+        ./cloneall
 
     - name: Download Linux installer package
       uses: actions/download-artifact@v2
