--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -92,6 +92,9 @@ jobs:
     name: Test Windows package
     runs-on: windows-latest
     needs: build-windows
+    env:
+      RobotPythonPath: "C:/Program Files/RobotFramework/python39"
+      RobotTutorialPath: "C:/RobotTest/tutorial"
 
     steps:
     - name: Support long path in git
@@ -117,8 +120,7 @@ jobs:
       shell: cmd
       run: |
         set Robot
-        "C:\Program Files\RobotFramework\python39\python" test/aio-test-trigger/aio-test-trigger.py
-
+        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py
 
   install-test-linux:
     name: Test Linux package
@@ -146,32 +148,45 @@ jobs:
       run: |
         . /opt/rfwaio/linux/set_robotenv.sh
         printenv | grep Robot
-        /opt/rfwaio/python39/install/bin/python3.9 test/aio-test-trigger/aio-test-trigger.py
+        $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py
 
-  # release:
-  #   runs-on: ubuntu-latest
-  #   needs: [install-test-windows, install-test-linux]
+  release:
+    name: Release AIO
+    runs-on: ubuntu-latest
+    needs: [install-test-windows, install-test-linux]
+    # if: github.ref_type == 'tag'
 
-  #   steps:
-  #   - name: Download artifact from build workflow
-  #     uses: actions/download-artifact@v2
-  #     # with:
-  #     #   name: windows-package
-  #     #   path: windows
+    steps:
+    - name: Download artifact from build workflow
+      uses: actions/download-artifact@v2
 
-  #   - name: Unzip artifact
-  #     run: |
-  #       unzip artifact-from-build-workflow/artifact-from-build-workflow.zip -d artifact-from-build-workflow
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ env.TAG_NAME }}
+        release_name: Release v${{ env.TAG_NAME }}
+        draft: false
+        prerelease: false
 
-  #   - name: Create Release
-  #     uses: actions/create-release@v1
-  #     env:
-  #       GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-  #     with:
-  #       tag_name: v${{ env.TAG_NAME }}
-  #       release_name: Release v${{ env.TAG_NAME }}
-  #       draft: false
-  #       prerelease: false
-  #       assets:
-  #       - name: artifact-from-build-workflow
-  #         path: artifact-from-build-workflow          path: Output/
+    - name: Upload Windows Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./*.exe
+        # asset_name: setup_RobotFramework_AIO_Win_${{ env.TAG_NAME }}.exe
+        asset_content_type: application/octet-stream
+
+    - name: Upload Linux Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./*.deb
+        # asset_name: setup_RobotFramework_AIO_Linux_${{ env.TAG_NAME }}.deb
+        asset_content_type: application/vnd.debian.binary-package
